chore: update HACS repositories (#246)
chore: update Mail and Packages

--- a/custom_components/mail_and_packages/translations/es.json
+++ b/custom_components/mail_and_packages/translations/es.json
@@ -18,7 +18,9 @@
                     "host": "Anfitrión",
                     "password": "Contraseña",
                     "port": "Puerto",
-                    "username": "Nombre de usuario"
+                    "username": "Nombre de usuario",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Ingrese la información de conexión de su servidor de correo.",
                 "title": "Correo y paquetes (Paso 1 de 2)"
@@ -67,7 +69,9 @@
                     "host": "Anfitrión",
                     "password": "Contraseña",
                     "port": "Puerto",
-                    "username": "Nombre de usuario"
+                    "username": "Nombre de usuario",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Ingrese la información de conexión de su servidor de correo.",
                 "title": "Correo y paquetes (Paso 1 de 2)"
