--- a/custom_components/mail_and_packages/translations/hu.json
+++ b/custom_components/mail_and_packages/translations/hu.json
@@ -18,7 +18,9 @@
                     "host": "Házigazda",
                     "password": "Jelszó",
                     "port": "Kikötő",
-                    "username": "Felhasználónév"
+                    "username": "Felhasználónév",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Kérjük, adja meg a levelezőszerver csatlakozási adatait.",
                 "title": "Levél és csomagok (1. lépés a 2-ből)"
@@ -67,7 +69,9 @@
                     "host": "Házigazda",
                     "password": "Jelszó",
                     "port": "Kikötő",
-                    "username": "Felhasználónév"
+                    "username": "Felhasználónév",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Kérjük, adja meg a levelezőszerver csatlakozási adatait.",
                 "title": "Levél és csomagok (1. lépés a 2-ből)"
