--- a/custom_components/mail_and_packages/translations/nl.json
+++ b/custom_components/mail_and_packages/translations/nl.json
@@ -18,7 +18,9 @@
                     "host": "Gastheer",
                     "password": "Wachtwoord",
                     "port": "Haven",
-                    "username": "Gebruikersnaam"
+                    "username": "Gebruikersnaam",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Voer de verbindingsgegevens van uw mailserver in.",
                 "title": "Mail en pakketten (stap 1 van 2)"
@@ -67,7 +69,9 @@
                     "host": "Gastheer",
                     "password": "Wachtwoord",
                     "port": "Haven",
-                    "username": "Gebruikersnaam"
+                    "username": "Gebruikersnaam",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Voer de verbindingsgegevens van uw mailserver in.",
                 "title": "Mail en pakketten (stap 1 van 2)"
