--- a/custom_components/mail_and_packages/translations/ru.json
+++ b/custom_components/mail_and_packages/translations/ru.json
@@ -18,7 +18,9 @@
                     "host": "хозяин",
                     "password": "пароль",
                     "port": "порт",
-                    "username": "имя пользователя"
+                    "username": "имя пользователя",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Пожалуйста, введите информацию о соединении вашего почтового сервера.",
                 "title": "Почта и Пакеты (Шаг 1 из 2)"
@@ -67,7 +69,9 @@
                     "host": "хозяин",
                     "password": "пароль",
                     "port": "порт",
-                    "username": "имя пользователя"
+                    "username": "имя пользователя",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Пожалуйста, введите информацию о соединении вашего почтового сервера.",
                 "title": "Почта и Пакеты (Шаг 1 из 2)"
