--- a/custom_components/mail_and_packages/translations/sl.json
+++ b/custom_components/mail_and_packages/translations/sl.json
@@ -18,7 +18,9 @@
                     "host": "Gostitelj",
                     "password": "Geslo",
                     "port": "Pristanišče",
-                    "username": "Uporabniško ime"
+                    "username": "Uporabniško ime",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Vnesite podatke o povezavi vašega poštnega strežnika.",
                 "title": "Pošta in paketi (1. korak od 2)"
@@ -67,7 +69,9 @@
                     "host": "Gostitelj",
                     "password": "Geslo",
                     "port": "Pristanišče",
-                    "username": "Uporabniško ime"
+                    "username": "Uporabniško ime",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Vnesite podatke o povezavi vašega poštnega strežnika.",
                 "title": "Pošta in paketi (1. korak od 2)"
