--- a/custom_components/mail_and_packages/translations/sv.json
+++ b/custom_components/mail_and_packages/translations/sv.json
@@ -18,7 +18,9 @@
                     "host": "Värd",
                     "password": "Lösenord",
                     "port": "Hamn",
-                    "username": "Användarnamn"
+                    "username": "Användarnamn",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Ange anslutningsinformationen för din postserver.",
                 "title": "Mail och paket (steg 1 av 2)"
@@ -67,7 +69,9 @@
                     "host": "Värd",
                     "password": "Lösenord",
                     "port": "Hamn",
-                    "username": "Användarnamn"
+                    "username": "Användarnamn",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Ange anslutningsinformationen för din postserver.",
                 "title": "Mail och paket (steg 1 av 2)"
