--- a/custom_components/mail_and_packages/translations/ca.json
+++ b/custom_components/mail_and_packages/translations/ca.json
@@ -18,7 +18,9 @@
                     "host": "Amfitrió",
                     "password": "Contrasenya",
                     "port": "Port",
-                    "username": "Nom d'usuari"
+                    "username": "Nom d'usuari",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Introduïu la informació de connexió del vostre servidor de correu.",
                 "title": "Correu i paquets (pas 1 de 2)"
@@ -67,7 +69,9 @@
                     "host": "Amfitrió",
                     "password": "Contrasenya",
                     "port": "Port",
-                    "username": "Nom d'usuari"
+                    "username": "Nom d'usuari",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Introduïu la informació de connexió del vostre servidor de correu.",
                 "title": "Correu i paquets (pas 1 de 2)"
