--- a/custom_components/mail_and_packages/translations/de.json
+++ b/custom_components/mail_and_packages/translations/de.json
@@ -18,7 +18,9 @@
                     "host": "Host",
                     "password": "Passwort",
                     "port": "Port",
-                    "username": "Nutzername"
+                    "username": "Nutzername",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Bitte geben Sie die Verbindungsinformationen Ihres Mailservers ein.",
                 "title": "Briefe und Pakete (Schritt 1 von 2)"
@@ -67,7 +69,9 @@
                     "host": "Host",
                     "password": "Passwort",
                     "port": "Port",
-                    "username": "Nutzername"
+                    "username": "Nutzername",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Bitte geben Sie die Verbindungsinformationen Ihres Mailservers ein.",
                 "title": "Briefe und Pakete (Schritt 1 von 2)"
