--- a/custom_components/mail_and_packages/translations/en.json
+++ b/custom_components/mail_and_packages/translations/en.json
@@ -18,7 +18,9 @@
                     "host": "Host",
                     "password": "Password",
                     "port": "Port",
-                    "username": "Username"
+                    "username": "Username",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Please enter the connection information of your mail server.",
                 "title": "Mail and Packages (Step 1 of 2)"
@@ -67,7 +69,9 @@
                     "host": "Host",
                     "password": "Password",
                     "port": "Port",
-                    "username": "Username"
+                    "username": "Username",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Please enter the connection information of your mail server.",
                 "title": "Mail and Packages (Step 1 of 2)"
