--- a/custom_components/mail_and_packages/translations/fr.json
+++ b/custom_components/mail_and_packages/translations/fr.json
@@ -18,7 +18,9 @@
                     "host": "Hôte",
                     "password": "Mot de passe",
                     "port": "Port",
-                    "username": "Nom d'utilisateur"
+                    "username": "Nom d'utilisateur",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Veuillez saisir les informations de connexion de votre serveur de messagerie.",
                 "title": "Courrier et colis (étape 1 sur 2)"
@@ -67,7 +69,9 @@
                     "host": "Hôte",
                     "password": "Mot de passe",
                     "port": "Port",
-                    "username": "Nom d'utilisateur"
+                    "username": "Nom d'utilisateur",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Veuillez saisir les informations de connexion de votre serveur de messagerie.",
                 "title": "Courrier et colis (étape 1 sur 2)"
