--- a/custom_components/mail_and_packages/translations/ko.json
+++ b/custom_components/mail_and_packages/translations/ko.json
@@ -18,7 +18,9 @@
                     "host": "주최자",
                     "password": "암호",
                     "port": "포트",
-                    "username": "사용자 이름"
+                    "username": "사용자 이름",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "메일 서버의 연결 정보를 입력하십시오.",
                 "title": "메일 및 패키지 (1/2 단계)"
@@ -67,7 +69,9 @@
                     "host": "주최자",
                     "password": "암호",
                     "port": "포트",
-                    "username": "사용자 이름"
+                    "username": "사용자 이름",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "메일 서버의 연결 정보를 입력하십시오.",
                 "title": "메일 및 패키지 (1/2 단계)"
