--- a/custom_components/mail_and_packages/translations/pl.json
+++ b/custom_components/mail_and_packages/translations/pl.json
@@ -18,7 +18,9 @@
                     "host": "Gospodarz",
                     "password": "Hasło",
                     "port": "Port",
-                    "username": "Nazwa Użytkownika"
+                    "username": "Nazwa Użytkownika",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Podaj informacje o połączeniu swojego serwera pocztowego.",
                 "title": "Poczta i paczki (krok 1 z 2)"
@@ -67,7 +69,9 @@
                     "host": "Gospodarz",
                     "password": "Hasło",
                     "port": "Port",
-                    "username": "Nazwa Użytkownika"
+                    "username": "Nazwa Użytkownika",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Podaj informacje o połączeniu swojego serwera pocztowego.",
                 "title": "Poczta i paczki (krok 1 z 2)"
