--- a/custom_components/mail_and_packages/translations/pt.json
+++ b/custom_components/mail_and_packages/translations/pt.json
@@ -18,7 +18,9 @@
                     "host": "Hospedeiro",
                     "password": "Senha",
                     "port": "Porta",
-                    "username": "Nome do usuário"
+                    "username": "Nome do usuário",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Por favor, insira as informações de conexão do seu servidor de correio.",
                 "title": "Correio e pacotes (Etapa 1 de 2)"
@@ -67,7 +69,9 @@
                     "host": "Hospedeiro",
                     "password": "Senha",
                     "port": "Porta",
-                    "username": "Nome do usuário"
+                    "username": "Nome do usuário",
+                    "imap_security": "IMAP Security",
+                    "verify_ssl": "Verify SSL Cert"
                 },
                 "description": "Por favor, insira as informações de conexão do seu servidor de correio.",
                 "title": "Correio e pacotes (Etapa 1 de 2)"
