--- a/custom_components/solaredge_modbus_multi/translations/nl.json
+++ b/custom_components/solaredge_modbus_multi/translations/nl.json
@@ -44,7 +44,7 @@
           "detect_meters": "Meters automatisch detecteren",
           "detect_batteries": "Batterijen automatisch detecteren",
           "detect_extras": "Automatische detectie van aanvullende entiteiten",
-          "advanced_power_control": "Geavanceerde stroomregeling",
+          "advanced_power_control": "Opties voor vermogensregeling",
           "sleep_after_write": "Omvormer commando vertraging (seconden)"
         }
       },
@@ -98,6 +98,14 @@
           "already_configured": "Host en poort zijn al geconfigureerd in een andere hub."
         }
       }
+    },
+    "detect_timeout_gpc": {
+      "title": "Global Dynamic Power Control Time -out",
+      "description": "De omvormer reageerde niet tijdens het lezen van gegevens voor Global Dynamic Power Controls."
+    },
+    "detect_timeout_apc": {
+      "title": "Geavanceerde time -out voor stroomregeling",
+      "description": "De omvormer reageerde niet tijdens het lezen van gegevens voor geavanceerde stroomregeling."
     }
   }
 }
